--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,7 @@ jobs:
           node-version: 18
       - run: npm ci
       - run: npm run test
-      - run: PATH_PREFIX="/readme/" npm run build
+      - run: VITE_PATH_PREFIX="/readme/" npm run build
       - run: |
           echo "User-agent: *\n  Disallow: /" >> dist/robots.txt
       - name: Deploy
