--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,7 +18,8 @@ jobs:
       - run: npm run test
       - run: VITE_PATH_PREFIX="/readme/" npm run build
       - run: |
-          echo "User-agent: *\n  Disallow: /" >> dist/robots.txt
+          echo "User-agent: *
+            Disallow: /" >> dist/robots.txt
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
