--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "copy-text-to-clipboard": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.3"
+    "react-markdown": "^8.0.3",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.15",
