--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "readme",
-  "private": true,
-  "version": "0.0.0",
+  "author": "Oliver Smit <github.com/olmesm>",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -22,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "c8": "^7.12.0",
+    "surge": "^0.23.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vitest": "^0.21.1"
